; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_sg_pool.c_sg_pool_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_sg_pool.c_sg_pool_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sg_pool = type { i32 }
%struct.scatterlist = type { i32 }

@sg_pools = common dso_local global %struct.sg_pool* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.scatterlist* (i32, i32)* @sg_pool_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.scatterlist* @sg_pool_alloc(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.sg_pool*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load %struct.sg_pool*, %struct.sg_pool** @sg_pools, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @sg_pool_index(i32 %7)
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.sg_pool, %struct.sg_pool* %6, i64 %9
  store %struct.sg_pool* %10, %struct.sg_pool** %5, align 8
  %11 = load %struct.sg_pool*, %struct.sg_pool** %5, align 8
  %12 = getelementptr inbounds %struct.sg_pool, %struct.sg_pool* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call %struct.scatterlist* @mempool_alloc(i32 %13, i32 %14)
  ret %struct.scatterlist* %15
}

declare dso_local i32 @sg_pool_index(i32) #1

declare dso_local %struct.scatterlist* @mempool_alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
